fix uneven spacing of restuarants lists on narrow screens
The minimum column size was reduced so as to accomodate narrow screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,7 @@ nav h1 a {
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-column-gap: 5em;
   background-color: #f3f3f3;
   list-style: outside none none;
